update overflow issue on mobile

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -457,14 +457,14 @@ ul.no-bullets {
   margin-left: 10px;
   margin-right: 10px;
   border: #6a737d solid 1px;
+  h5 {
+    display: block;
+  }
   ol {
     text-align: left;
     padding-right: 20px;
   }
   h4 {
     text-decoration: underline;
-  }
-  h5 {
-    line-height: 0;
   }
 }
